Got rid of code-occurrence counting of LINQ queries + human review of LinqAnalyzer